--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:web="http://java.sun.com/xml/ns/javaee" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>jeecg-framework-3.4.3 GA</display-name>
   <context-param>
     <param-name>webAppRootKey</param-name>
@@ -175,4 +172,14 @@
   <welcome-file-list>
     <welcome-file>/webpage/login/login.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>VideoCap</display-name>
+    <servlet-name>VideoCap</servlet-name>
+    <servlet-class>com.lhmh.servlet.VideoCap</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>VideoCap</servlet-name>
+    <url-pattern>/VideoCap</url-pattern>
+  </servlet-mapping>
 </web-app>
