--- a/src/main/resources/jeecg/jeecg_config.properties
+++ b/src/main/resources/jeecg/jeecg_config.properties
@@ -26,4 +26,4 @@ jeecg_filed_convert=true
 #ui_filter_fields \u8fc7\u6ee4\u4e0d\u9700\u8981\u9875\u9762\u751f\u6210\u7684\u8868\u5b57\u6bb5
 ui_filter_fields=update_by,update_name
 #\
-project_path=E\:/gitmain/minidao-github/jeecg-framework
+project_path=D\:/0-github/lhmhm
