--- a/src/main/resources/jeecg/jeecg_database.properties
+++ b/src/main/resources/jeecg/jeecg_database.properties
@@ -1,9 +1,9 @@
 #mysql 
 diver_name=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/fddb?useUnicode=true&characterEncoding=UTF-8
+url=jdbc:mysql://localhost:3306/lhmhm?useUnicode=true&characterEncoding=UTF-8
 username=root
 password=
-database_name=fddb
+database_name=lhmhm
 
 #oracle
 #diver_name=oracle.jdbc.driver.OracleDriver
