--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,5 @@
-log4j.rootLogger=info,A1,R
+#log4j.rootLogger=DEBUG,A1,R
+log4j.rootCategory = INFO, A1
 
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.Target=System.out
@@ -6,17 +7,27 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=[%c]%m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender 
-log4j.appender.R.File=target/tomcat/logs/jeecgv3.log
+log4j.appender.R.File=target/tomcat/jeecgv3.log
 log4j.appender.R.MaxFileSize=10MB
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH\:mm\:ss,SSS}][%c]%m%n
 
-log4j.category.com.lhmh=info,LHMH01
-log4j.additivity.com.lhmh=false
+log4j.category.com.lhmh.controller=DEBUG,LHMH01
+log4j.additivity.com.lhmh.controller=false
 
 log4j.appender.LHMH01=org.apache.log4j.RollingFileAppender
-log4j.appender.LHMH01.File=target/tomcat/logs/lhmh.log
+log4j.appender.LHMH01.File=D:/logs/lhmh.log
 log4j.appender.LHMH01.MaxFileSize=5000000
 log4j.appender.LHMH01.encoding=UTF-8
 log4j.appender.LHMH01.layout=org.apache.log4j.PatternLayout
 log4j.appender.LHMH01.layout.ConversionPattern=[%d] %-5p - %m%n
+
+log4j.category.com.lhmh.pub=DEBUG,LHMH02
+log4j.additivity.com.lhmh.pub=false
+
+log4j.appender.LHMH02=org.apache.log4j.RollingFileAppender
+log4j.appender.LHMH02.File=D:/logs/lhmhpub.log
+log4j.appender.LHMH02.MaxFileSize=5000000
+log4j.appender.LHMH02.encoding=UTF-8
+log4j.appender.LHMH02.layout=org.apache.log4j.PatternLayout
+log4j.appender.LHMH02.layout.ConversionPattern=[%d] %-5p - %m%n
