--- a/httpd.conf
+++ b/httpd.conf
@@ -484,4 +484,7 @@ SSLRandomSeed connect builtin
 <VirtualHost *:80>
 ProxyPass /jeecg-framework http://localhost:8080/jeecg-framework
 ProxyPassReverse /jeecg-framework http://localhost:8080/jeecg-framework
+
+ProxyPass /uploadImg http://localhost:3000/uploadImg
+ProxyPassReverse /uploadImg http://localhost:3000/uploadImg
 </VirtualHost>
