--- a/httpd.conf
+++ b/httpd.conf
@@ -174,7 +174,7 @@ ServerAdmin xx@xx.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "C:/Program Files (x86)/Apache Software Foundation/Apache2.2/htdocs"
+DocumentRoot "D:/apacheDoc"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -201,7 +201,7 @@ DocumentRoot "C:/Program Files (x86)/Apache Software Foundation/Apache2.2/htdocs
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "C:/Program Files (x86)/Apache Software Foundation/Apache2.2/htdocs">
+<Directory "D:/apacheDoc">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
