--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="E:/apache-tomcat-6.0.37-windows-x64/apache-tomcat-6.0.37/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="E:/apache-tomcat-6.0.37-windows-x64/apache-tomcat-6.0.37/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="D:/1-SOFTINSTALL/apache-tomcat-6.0.37-windows-x64/apache-tomcat-6.0.37/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="D:/1-SOFTINSTALL/apache-tomcat-6.0.37-windows-x64/apache-tomcat-6.0.37/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
